<?xml version="1.0" encoding="utf-8"?>
<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
<!--    xmlns:tools="http://schemas.android.com/tools"-->
<!--    android:layout_width="match_parent"-->
<!--    android:layout_height="match_parent"-->
<!--    tools:context=".Home.UserProfile">-->

<!--    <LinearLayout-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:orientation="vertical"-->
<!--        android:padding="30dp">-->
<!--    <ImageView-->
<!--        android:id="@+id/button2"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:src="@drawable/ic_arrow_back"-->
<!--        android:onClick="callHomeScreen">-->
<!--    </ImageView>-->
<!--    <de.hdodenhof.circleimageview.CircleImageView-->
<!--        android:id="@+id/image_profile"-->
<!--        android:layout_width="120dp"-->
<!--        android:layout_height="120dp"-->
<!--        android:layout_centerHorizontal="true"-->
<!--        android:src="#000"-->
<!--        android:layout_gravity="center"-->
<!--        android:layout_marginTop="2dp" />-->

<!--    <TextView-->
<!--        android:id="@+id/name"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_below="@id/image_profile"-->
<!--        android:layout_gravity="center"-->
<!--        android:text="@string/mr_mkm"-->
<!--        android:textSize="24sp"-->
<!--        android:textStyle="bold" />-->



<!--        <TableLayout-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="20dp">-->
<!--            <TableRow android:padding="10dp">-->
<!--                <TextView-->
<!--                    android:id="@+id/f_name"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/f_name"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="20sp"-->
<!--                    />-->

<!--                <EditText-->
<!--                    android:id="@+id/fe_name"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/firstname"-->
<!--                    android:textSize="20sp"-->
<!--                    android:importantForAutofill="no"/>-->
<!--            </TableRow>-->
<!--            <TableRow android:padding="10dp">-->
<!--                <TextView-->
<!--                    android:id="@+id/l_name"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/l_name"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="20sp"-->
<!--                    />-->

<!--                <EditText-->
<!--                    android:id="@+id/le_name"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/lastname"-->
<!--                    android:textSize="20sp"-->
<!--                    android:importantForAutofill="no"/>-->
<!--            </TableRow>-->
<!--            <TableRow android:padding="10dp">-->
<!--                <TextView-->
<!--                    android:id="@+id/Mobile"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/mobile_no"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="20sp"-->
<!--                    />-->

<!--                <EditText-->
<!--                    android:id="@+id/E_mobile"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/phone"-->
<!--                    android:textSize="20sp"-->
<!--                    android:importantForAutofill="no"/>-->
<!--            </TableRow>-->
<!--            <TableRow android:padding="10dp">-->
<!--                <TextView-->
<!--                    android:id="@+id/Email"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="@string/U_email"-->
<!--                    android:textStyle="bold"-->
<!--                    android:textSize="20sp"-->
<!--                    />-->

<!--                <EditText-->
<!--                    android:id="@+id/E_Email"-->
<!--                    android:layout_width="match_parent"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:hint="@string/email"-->
<!--                    android:textSize="20sp"-->
<!--                    android:importantForAutofill="no"/>-->
<!--            </TableRow>-->
<!--            <TableRow android:padding="10dp">-->

<!--            </TableRow>-->
<!--        </TableLayout>-->

<!--    </LinearLayout>-->
<!--</ScrollView>-->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".Home.UserProfile">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="center_horizontal"
            android:background="@color/white"
            android:contentInsetLeft="0dp"
            android:contentInsetStart="0dp"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:theme="@style/ToolBarStyle">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/button2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="?android:attr/selectableItemBackground"
                    android:padding="15dp"
                    android:src="@drawable/ic_left"
                    android:tint="@color/colorPrimary"
                    android:onClick="callHomeScreen"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_centerHorizontal="true"
                    android:gravity="center_vertical"
                    android:text="Profile"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20sp" />

            </RelativeLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_below="@id/header">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_marginTop="30dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image_profile"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@color/black"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="15sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/E_Email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:textSize="23sp"
            android:layout_marginTop="7dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="15sp"
            android:layout_marginTop="20dp"/>

        <TextView
            android:id="@+id/E_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:textSize="23sp"
            android:layout_marginTop="7dp"/>
        <Button
            android:id="@+id/btnUpload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="save"
            android:layout_gravity="center">
        </Button>

    </LinearLayout>

    </ScrollView>


    <View
    android:id="@+id/shadow"
    android:layout_width="match_parent"
    android:layout_height="4dp"
    android:layout_below="@id/header"
    android:background="@drawable/shadow_bottom" />
</RelativeLayout>